@@ -28,6 +28,7 @@ A Chrome extension with tools and improvements for Hyperiums 7 (unofficial)
 - Information about deployed fleets
 - Coordinates for moving fleets
 - Button to drop/enable stasis on military page
+- Overview of Army Capacity, Carried Armies and Ground Armies on military page
 
 #### Trading
 - One input for all planets in Global exploitations manager
